Bug 146876 - FILEOPEN PPTX: various graphical elements misplaced at position (0,0)
Summary: FILEOPEN PPTX: various graphical elements misplaced at position (0,0)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
: 146961 (view as bug list)
Depends on:
Blocks: OOXML-Shapes 139808
  Show dependency treegraph
 
Reported: 2022-01-20 13:37 UTC by Gerald Pfeifer
Modified: 2022-01-31 00:22 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample PPTX slide (102.53 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-01-20 13:37 UTC, Gerald Pfeifer
Details
Visual comparison LibreOffice 7.4 vs Office 365 (345.00 KB, image/png)
2022-01-20 13:39 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2022-01-20 13:37:43 UTC
Created attachment 177673 [details]
Sample PPTX slide

This is a recent regressions, probably less than a week old.

How to reproduce:

 1. Open sample document.
 2. Observe how to of the graphical elements appear in the upper left
    corner, coordinates (0,0), instead of their regular place.
 3. Visual comparison provided by screenshots LO vs 365.
Comment 1 Gerald Pfeifer 2022-01-20 13:39:28 UTC
Created attachment 177674 [details]
Visual comparison LibreOffice 7.4 vs Office 365

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 4a388f5e01ebb5a512931d11e48c4380382239c8
CPU threads: 8; OS: Linux 5.16; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Comment 2 Aron Budea 2022-01-20 14:07:39 UTC
Reproduced in LO Version: 7.4.0.0.alpha0+ (bd5492275d31f59b1d269205018d1487af52426f) / Ubuntu.

Bibisected to the following commit using repo bibisect-linux-64-7.4. Adding CC: to Noel Grandin.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=2e162bb1e8521ad8cd8148e0a18adc3eebadd710
author		Noel Grandin <noel.grandin@collabora.co.uk>	2022-01-13 13:13:57 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2022-01-14 09:45:43 +0100

use cache value in ViewContact
Comment 3 Xisco Faulí 2022-01-20 14:51:59 UTC
yep, reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: bd5492275d31f59b1d269205018d1487af52426f
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 4 Xisco Faulí 2022-01-24 10:25:05 UTC
According to office-interoperability-tools results, many files are affected by this issue, bumping importance
Comment 5 Regina Henschel 2022-01-24 16:42:39 UTC
*** Bug 146961 has been marked as a duplicate of this bug. ***
Comment 6 Regina Henschel 2022-01-24 16:45:37 UTC
I have set bug 1146961 to duplicate, because bibisection there points to the same commit as here. So it seems, that not only PPTX import is affected but drawing shapes from scratch too.
Comment 7 Commit Notification 2022-01-26 08:35:15 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/10692be9472584c2dc49d298afd0192fb9ebfe86

tdf#146876 PPTX: various graphical elements misplaced

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Gerald Pfeifer 2022-01-26 09:43:21 UTC
Any chance for a regression test for this?

The reverted patch surprisingly made it in despite breaking a lot of
real life PPTX presentations (and sadly this is beyond my level of 
expertise).
Comment 9 Xisco Faulí 2022-01-26 10:02:28 UTC
(In reply to Gerald Pfeifer from comment #8)
> Any chance for a regression test for this?
> 
> The reverted patch surprisingly made it in despite breaking a lot of
> real life PPTX presentations (and sadly this is beyond my level of 
> expertise).

yes, I'll create it
Comment 10 Commit Notification 2022-01-29 18:03:07 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/71a737c5b81bdf9dce75f8f575da2f98e70f0418

tdf#146876: sd_layout_tests: Add unittest

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Gerald Pfeifer 2022-01-31 00:22:00 UTC
Happy to verify this as fixed, both with the sample document attached
to this report and others that showed the issue:
 
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 7055ad90927d0d2e0dc5eab3774322e386fe2b15
CPU threads: 8; OS: Linux 5.16; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded


And thank you, Xisco, for adding the regression test!