tdf#146876 PPTX: various graphical elements misplaced

Revert "use cache value in ViewContact"
This reverts commit 2e162bb1e8521ad8cd8148e0a18adc3eebadd710.

Apparently invalidation is not reliable anywhere for ViewContact

Change-Id: I1ec40f27de77859a55bf00b80d029fa7181b4492
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/128949
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>